now mongo dont warn when making interations

--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -1,5 +1,5 @@
 spring:
   profiles: default
   data.mongodb:
-    uri: mongodb+srv://react:yTpC0pzPCWnxaDbo@cluster0.ro2ul.gcp.mongodb.net/pec?retryWrites=true&w=majoritylogging.level.web
+    uri: mongodb+srv://react:yTpC0pzPCWnxaDbo@cluster0.ro2ul.gcp.mongodb.net/pec?retryWrites=true&w=majority;
 
