--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,20 @@
 			<artifactId>spring-security-core</artifactId>
 			<version>5.3.3.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!-- OAuth2 -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+			<version>2.0.6.RELEASE</version>
+		</dependency>
     </dependencies>
 
 	<build>
