--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                  <groupId>com.google.cloud.tools</groupId>
+                  <artifactId>appengine-maven-plugin</artifactId>
+                  <version>2.2.0</version>
+            </plugin>
         </plugins>
     </build>
 </project>
