using variable instead plain text password to mongo (turning project public)

--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -1,7 +1,7 @@
 spring:
   profiles: default
   data.mongodb:
-    uri: mongodb+srv://react:yTpC0pzPCWnxaDbo@cluster0.ro2ul.gcp.mongodb.net/pec?retryWrites=true&w=majority;
+    uri: mongodb+srv://react:${MONGO_PEC_PASS}@cluster0.ro2ul.gcp.mongodb.net/pec?retryWrites=true&w=majority;
 
 adminUser:
   email: admin@pec.com.br
